[package]
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
name = "hanabi-core"
version = "0.0.1"
[dependencies]
enum-iterator-derive = "0.1.1"
error-chain-mini = "0.0.2"
error-chain-mini-derive = "0.0.2"
rand = "0.5.0-pre.1"
serde = "1.0"
serde_derive = "1.0"

[dependencies.uuid]
features = ["v4", "serde"]
version = "0.6"
